--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css"/>
         <!--AOS-->
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
-        <link rel="html" href="kristianap2.html"
+        <link rel="html" href="index2.html"
     </head>
 
         <body>
@@ -19,7 +19,7 @@
                 <h2>season 3</h2>
                 <h1><b>Jujutsu kaisen</b></h1>
                 <p><b>ぜひチェックして、忘れずにご覧ください</b></p>
-                <a href="kristianap2.html" class="btn">Advance information</a>
+                <a href="index2.html" class="btn">Advance information</a>
         </div>
         </header>
 
@@ -30,3 +30,4 @@
         </script>
         </body>
     </html>
+
