--- a/index2.html
+++ b/index2.html
@@ -49,7 +49,7 @@
                          </tr>             
                         <tr>
                                         <td height="30px" width="30px"div class="advance">
-                                        <a href="kristianap.html" class="btn">Back</a>
+                                        <a href="index.html" class="btn">Back</a>
                                         <td height="30px">
                                         <center><a href="https://www.komikcast.com" class="btn2" target="_blank">Manga</a></center>
                                 </td>
@@ -65,3 +65,4 @@
 </body>            
 
 </html>
+
